# snowflake-atlas

./: .codacy.yml  .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/agent-handoff/: SKILL.md
.agents/skills/atlas-creation/: SKILL.md
.agents/skills/atlas-creation/references/: README.md  architecture.md  backend-selection.md  bundle-format.md  chunking-strategy.md  testing.md
.agents/skills/code-review/: SKILL.md
.agents/skills/code-review/references/: SECURITY.md
.agents/skills/debugging/: SKILL.md
.agents/skills/debugging/references/: CATEGORIES.md  FLAPPING.md  PATTERNS.md
.agents/skills/embedding-strategies/: SKILL.md
.agents/skills/embedding-strategies/references/: details.md
.agents/skills/eval-driven-dev/: SKILL.md
.agents/skills/python-patterns/: SKILL.md
.agents/skills/python-testing/: SKILL.md
.agents/skills/readme-writing/: SKILL.md
.agents/skills/readme-writing/references/: CHECKLIST.md  TEMPLATES.md  TIERS.md
.agents/skills/security-review/: SKILL.md
.agents/skills/skill-compliance/: SKILL.md
.agents/skills/skill-compliance/assets/: cache.json
.agents/skills/skill-writing/: SKILL.md
.agents/skills/snowflake-docs-nav/: SKILL.md
.agents/skills/web-browsing/: SKILL.md
.github/workflows/: ci.yml  security.yml
atlas/: __init__.py  backup.py  bm25_search.py  chunk.py  doctor.py  download.py  evaluate.py  fs_server.py  log.py  make_bundle.py  rag_server.py  rerank.py  rerank_mlx.py  restore.py  smoke_test.py
atlas/embed/: __init__.py  base.py  mlx.py  onnx.py
atlas/sources/: __init__.py  base.py  git.py  local.py  web_crawl.py
scripts/: gen_golden.py  publish-bundle.sh
snowflake_docs_nav/: __init__.py  crawler.py
tests/: __init__.py  test_backup_restore.py  test_bm25_search.py  test_chunk.py  test_doctor.py  test_download.py  test_embed.py  test_fs_server.py  test_rag_server.py  test_rerank_mlx.py  test_sources.py
tools/: convert_bge_to_mlx.py  convert_reranker_to_mlx.py
(+14 files in other folders)
