[project]
name = "snowflake-atlas"
version = "0.1.0"
description = "Snowflake Atlas — local-first AI knowledge layer for Snowflake documentation via MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "transformers>=4.40",
    "tokenizers>=0.19",
    "sentencepiece>=0.2",
    "onnxruntime>=1.18",
    "structlog>=24.1",
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
build = [
    "tqdm>=4.66",
]
mlx = [
    "mlx>=0.20",
]
gpu = [
    "onnxruntime-gpu>=1.18",
]
stealth = [
    "camoufox>=0.3",
]

[project.scripts]
snowflake-fs = "atlas.fs_server:main"
snowflake-rag = "atlas.rag_server:main"
atlas-build = "atlas.make_bundle:main"
atlas-download = "atlas.download:main"
atlas-backup = "atlas.backup:main"
atlas-restore = "atlas.restore:main"
atlas-smoke = "atlas.smoke_test:main"
atlas-doctor = "atlas.doctor:main"
atlas-evaluate = "atlas.evaluate:main"
snowflake-crawl = "snowflake_docs_nav.crawler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas", "snowflake_docs_nav"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.18",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".agents/", ".handoffs/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]
addopts = "-ra"
asyncio_mode = "auto"
